# spring_oop

filatov_i_a/: .build.bat  .gitignore  CMakeLists.txt
filatov_i_a/Documentation/: Doxyfile
filatov_i_a/prj.cw/: CMakeLists.txt  main.cpp
filatov_i_a/prj.cw/Documentation/: Doxyfile
filatov_i_a/prj.cw/SysCalculator/: SysCalculator.cpp
filatov_i_a/prj.cw/SysCalculator/include/: SysCalculator.hpp
filatov_i_a/prj.cw/config/: 1.json  2.json  3.json  4.json  5.json
filatov_i_a/prj.lab/: CMakeLists.txt
filatov_i_a/prj.lab/Rational/: CMakeLists.txt  Rational.cpp
filatov_i_a/prj.lab/Rational/include/Rational/: Rational.h
filatov_i_a/prj.lab/Rational/include/rational/: rational.hpp
filatov_i_a/prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp
filatov_i_a/prj.lab/arrayd/include/arrayd/: arrayd.hpp
filatov_i_a/prj.lab/arrayt/: CMakeLists.txt
filatov_i_a/prj.lab/arrayt/include/arrayt/: arrayt.hpp
filatov_i_a/prj.lab/matrixs/: matrixs.cpp
filatov_i_a/prj.lab/matrixs/include/matrixs/: matrixs.hpp
filatov_i_a/prj.lab/orto/: orto.cpp
filatov_i_a/prj.lab/rational/: CMakeLists.txt  rational.cpp
filatov_i_a/prj.lab/rational/include/rational/: rational.hpp
filatov_i_a/prj.test/: CMakeLists.txt  RationalTest.cpp  arrayd.test.cpp  arrayt.test.cpp  matrixs.test.cpp  rational.test.cpp  rationaltest.cpp
